// Vitest Snapshot v1

exports[`should analyze complex vue-ts project 1`] = `
[
  {
    "entityType": "file",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/package.json",
    "id": "/package.json",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/services",
    "id": "/services",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/utils",
    "id": "/utils",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/",
    "id": "/",
    "type": "entity",
  },
  {
    "from": "/",
    "id": "/->/cmp.vue",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/index.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/index.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/package.json",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/package.json",
    "type": "relationship",
  },
  {
    "from": "/services",
    "id": "/services->/services/service.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/services/service.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/services",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/services",
    "type": "relationship",
  },
  {
    "from": "/utils",
    "id": "/utils->/utils/util.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/utils/util.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/utils",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/utils",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/",
    "type": "relationship",
  },
]
`;

exports[`should analyze complex vue2-ts project 1`] = `
[
  {
    "entityType": "file",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/package.json",
    "id": "/package.json",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/services/service.ts",
    "id": "/services/service.ts",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/services",
    "id": "/services",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/utils/util.ts",
    "id": "/utils/util.ts",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/utils",
    "id": "/utils",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/",
    "id": "/",
    "type": "entity",
  },
  {
    "from": "/",
    "id": "/->/cmp.vue",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/index.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/index.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/package.json",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/package.json",
    "type": "relationship",
  },
  {
    "from": "/services",
    "id": "/services->/services/service.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/services/service.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/services",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/services",
    "type": "relationship",
  },
  {
    "from": "/utils",
    "id": "/utils->/utils/util.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/utils/util.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/utils",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/utils",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/",
    "type": "relationship",
  },
]
`;

exports[`should analyze simple ts project 1`] = `
[
  {
    "entityType": "folder",
    "filePath": "/",
    "id": "/",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/util.ts",
    "id": "/util.ts",
    "type": "entity",
  },
  {
    "from": "/",
    "id": "/->/",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/index.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/index.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/util.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/util.ts",
    "type": "relationship",
  },
  {
    "columnEnd": 40,
    "columnStart": 14,
    "end": 39,
    "entityType": "variable",
    "filePath": "/util.ts",
    "id": "/util.ts/fn1",
    "kind": "VariableDeclaration",
    "lineEnd": 1,
    "lineStart": 1,
    "start": 13,
    "type": "entity",
  },
  {
    "columnEnd": 40,
    "columnStart": 14,
    "end": 39,
    "from": "/util.ts",
    "id": "/util.ts->/util.ts/fn1",
    "kind": "VariableDeclaration",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "parent",
    "start": 13,
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
  {
    "columnEnd": 40,
    "columnStart": 20,
    "end": 39,
    "from": "/util.ts/fn1",
    "id": "/util.ts/fn1->/util.ts/fn1",
    "kind": "ArrowFunction",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "parent",
    "start": 19,
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
  {
    "code": "a: number",
    "columnEnd": 30,
    "columnStart": 21,
    "end": 29,
    "entityType": "unknown",
    "filePath": "/util.ts",
    "id": "<unknown>",
    "kind": "Parameter",
    "lineEnd": 1,
    "lineStart": 1,
    "meta_kind": "Parameter",
    "start": 20,
    "type": "entity",
  },
  {
    "columnEnd": 22,
    "columnStart": 21,
    "end": 21,
    "from": "/util.ts/fn1",
    "id": "/util.ts/fn1-><unknown>",
    "kind": "Identifier",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "parent",
    "start": 20,
    "to": "<unknown>",
    "type": "relationship",
  },
  {
    "columnEnd": 29,
    "columnStart": 1,
    "end": 28,
    "from": "/index.ts",
    "id": "/index.ts->/util.ts",
    "kind": "ImportDeclaration",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "import",
    "start": 0,
    "to": "/util.ts",
    "type": "relationship",
  },
  {
    "columnEnd": 13,
    "columnStart": 10,
    "end": 12,
    "entityType": "variable",
    "filePath": "/index.ts",
    "id": "/index.ts/fn1",
    "kind": "ImportSpecifier",
    "lineEnd": 1,
    "lineStart": 1,
    "start": 9,
    "type": "entity",
  },
  {
    "columnEnd": 13,
    "columnStart": 10,
    "end": 12,
    "from": "/index.ts",
    "id": "/index.ts->/index.ts/fn1",
    "kind": "ImportSpecifier",
    "lineEnd": 1,
    "lineStart": 1,
    "relationType": "parent",
    "start": 9,
    "to": "/index.ts/fn1",
    "type": "relationship",
  },
  {
    "from": "/index.ts",
    "id": "/index.ts->/util.ts/fn1",
    "relationType": "use",
    "to": "/util.ts/fn1",
    "type": "relationship",
  },
]
`;

exports[`should analyze vue-ts project 1`] = `
[
  {
    "entityType": "file",
    "filePath": "/cmp.vue",
    "id": "/cmp.vue",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/index.ts",
    "id": "/index.ts",
    "type": "entity",
  },
  {
    "entityType": "file",
    "filePath": "/util.ts",
    "id": "/util.ts",
    "type": "entity",
  },
  {
    "entityType": "folder",
    "filePath": "/",
    "id": "/",
    "type": "entity",
  },
  {
    "from": "/",
    "id": "/->/cmp.vue",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/cmp.vue",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/index.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/index.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/util.ts",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/util.ts",
    "type": "relationship",
  },
  {
    "from": "/",
    "id": "/->/",
    "meta_source": "fs-coya",
    "relationType": "parent",
    "to": "/",
    "type": "relationship",
  },
]
`;
